--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kitties-amulet",
   "version": "1.0.0",
   "description": "Amulet ERC721 with forged CryptoKitties",
-  "main": "index.js",
+  "main": "truffle.js",
   "scripts": {
     "test": "npx truffle test",
     "build": "bash bin/build.sh",
@@ -17,8 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "openzeppelin-zos": "^1.9.1",
+    "zos-lib": "^0.1.28"
+  },
+  "devDependencies": {
     "truffle-hdwallet-provider": "0.0.5",
-    "zos": "^0.8.0",
-    "zos-lib": "^0.1.27"
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
+    "solium": "^1.1.7",
+    "zos": "^0.8.0"
   }
 }
