--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx truffle test",
     "build": "bash bin/build.sh",
+    "deploy": "bash bin/deploy.sh",
     "lint:sol": "solium -d contracts"
   },
   "repository": {
